Add links to signup/register

--- a/login/index.html
+++ b/login/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE HTML>
 <html>
-	<head>
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<link rel="stylesheet" href="./index.css">
-		<title>Einloggen</title>
-	</head>
-	<body>
-		<div class="app">
+
+<head>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" href="./index.css">
+	<title>Einloggen</title>
+</head>
+
+<body>
+	<div class="app">
 		<div class="prompt">
 			<div class="title">
 				Einloggen
@@ -17,8 +19,12 @@
 				<div class="button">
 					Fortfahren
 				</div>
+				<br>
+				<br>
 			</div>
+			<a href="/signup">Registrieren</a>
 		</div>
-		</div>
-	</body>
+	</div>
+</body>
+
 </html>
