--- a/login/index.html
+++ b/login/index.html
@@ -14,17 +14,24 @@
 				Einloggen
 			</div>
 			<div class="form">
-				<input placeholder="Nutzername">
-				<input placeholder="Passwort" type="password" id="password">
-				<div class="button">
-					Fortfahren
+				<div id="userinput">
+					<input placeholder="Nutzername" id="username">
+					<input placeholder="Passwort" type="password" id="password">
+					<div class="button" id="submitButton">
+						Fortfahren
+					</div>
+					<br>
+					<br>
 				</div>
-				<br>
-				<br>
+				<div id="error" style="display:none">
+					<div id="errormessage">Dies ist ein Fehler</div>
+					<div class="button" id="hideerror">Erneut versuchen</div>
+				</div>
 			</div>
 			<a href="/signup">Registrieren</a>
 		</div>
 	</div>
+	<script src="./index.js"></script>
 </body>
 
 </html>
