Add captcha to signup

--- a/login/signup/index.html
+++ b/login/signup/index.html
@@ -15,10 +15,13 @@
 				Registrieren
 			</div>
 			<div class="form">
+				<a href="/">Einloggen</a>
 				<div id="userinput">
 					<input placeholder="Nutzername" id="username">
 					<input placeholder="Passwort" type="password" id="password">
 					<input placeholder="Passwort Wiederholen" type="password" id="passwordRepeat">
+					<img id="catpchaImage" alt="Lädt..">
+					<input placeholder="Welche Zeichen sehen Sie? (Verifizierung)" type="text" id="captchaValue">
 					<div class="button" id="submitButton">
 						Fortfahren
 					</div>
@@ -28,7 +31,6 @@
 					<div class="button" id="hideerror">Erneut versuchen</div>
 				</div>
 			</div>
-			<a href="/">Einloggen</a>
 		</div>
 	</div>
 </body>
